@@ -1,3 +1,8 @@
+2004-11-03  Henrique de Moraes Holschuh <hmh@debian.org>
+
+	* timidity/aRts_a.c: disable aRts auto-detection to avoid
+	  segmentation violation
+
 2004-11-03  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
 
 	* timidity/timidity.c (list_dyna_interface): ditto
